--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://www.schmopera.com"
+baseURL = "https://jolly-goldstine-a2214c.netlify.app"
 languageCode = "en-us"
 title = "Schmopera"
 theme = "schmopera"
